--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -6,9 +6,8 @@
   body {
     scroll-behavior: smooth;
     scroll-padding-top: 30px;
-    background-color: #fcfcfc;
+    background-color: #fbfbfb;
     color: #4c4d5f;
-    /* color: #f8db62; */
   }
 }
 
